--- a/Documents/Report/FinalReportVersions/Version04/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version04/MaterialsAndMethodsModel.tex
@@ -97,33 +97,33 @@ Using the initial condition $T(0) = 0$ the solution is
 \begin{equation}
 T(u) = T_{max}\left(1-\exp(-k_T u)\right) 
 \end{equation}
+Because we cannot have two damages at the same position on the DNA, and the number of damages is bounded from above by $T_{max}$, we can treat the quantity 
+\begin{equation*}
+T(u)/T_{max}
+\end{equation*}
+as the relative length of the chromatin which is damaged.
 
 \subsection{Deriving the function $A(u)$ and $N(u)$ from the dynamics of loss}
-We now turn to construct a model for the number of nucleosomes $N(u)$ in ROI, as a function of the UV dose, $u$. Although the exact mechanism by which nucleosomes are lost is not known, we assume here that the number of nucleosomes left in the ROI, $N(u)$, is proportional to the rate of accumulation of DNA damages $T(u)$ on the remaining nucleosome with increasing uv dose. The nucleosome lost by sliding are initially located on a fixed chromatin of length $l$. The fraction of the total length nucleosomes are occupying is $N(u)b/l$, with $b$ the length of DNA wrapped on a histone. Therefore, with an addition of $T(u+du)-T(u)$ damages, the expected number of histone-wrapped DNA which is damaged is $(T(u+du)-T(u))/l  N(u)b/l $. Therefore, the equation for the number of nucleosomes left in the ROI 15 post UVC as a function of the uv dose can be written as
+We now turn to construct a model for the number of nucleosomes $N(u)$ left in ROI, as a function of the UV dose, $u$. Although the exact mechanism by which nucleosomes are lost is not known, we assume here that $N(u)$ is proportional to the rate of accumulation of DNA damages $T(u)$ with increasing uv dose. The nucleosome lost by sliding are initially located on a fixed chromatin of length $l$ in the IDR. The fraction out of the total chromatin length in the IDR that nucleosomes are occupying is $N(u)b/l$, with $b$ the length of DNA wrapped on a histone. Therefore, with an addition of $dT(u)$ damages, the number of histone-wrapped DNA which has at least one damage is a multiplication of the fraction of the chromatin damaged with the fraction of chromatin length nucleosomes are occupying, i.e. $ \frac{N(u)bdT}{lT_{max}} $. Therefore, the equation for the number of nucleosomes left in the ROI 15 post UVC as a function of the uv dose can be written as
 \begin{equation*}
 \frac{dN(u)}{du} = -k_NN(u)\frac{dT(u)}{du}
 \end{equation*}
-with $k_N$ the rate constant of histone depletion from the ROI due to sliding. Using the initial condition $N(0) = N_0$, the solution is given by
+with $k_N$ a constant describing the rate of histone depletion from the ROI due to sliding. Using the initial condition $N(0) = N_0$, the solution is given by
 \begin{equation}\label{eq:NumHistones}
-N(u) = N_0-k_NT_{max}\left(1-\exp(-k_Du)\right).
+N(u) = N_0\exp\left(-k_N\left(1-\exp(-k_Tu)\right)\right).
 \end{equation}
 Note that $N(u)$ represents the number of nucleosomes left in the ROI 15 minutes post UVC for a given UV dose $u$.
 
-To compute the dynamics of $A(u)$, we assume that with each damage position on the DNA there are repair protein attached to it which occupy space and collectively increase the area of the IDR. Damaged positions on the DNA, which are wrapped on histones needs to be exposed. With their exposure, repair proteins attach to the damage point. Because the length of the chromatin in the damage region does not change, only the portion of the chromatin occupied with nucleosomes change with UV dose. If $l$ is the chromatin length, and $b$ is the length of chromatin wrapped around a single histone, then the portion of the chromatin occupied by histones is $N(u)b/l$. For each UV dose, every point in a concentric ring around the laser's focal point is equally probable to be damaged. The opening is then related to the additional exposure of damages point which were wrapped on histones. 
-
-\begin{equation}
-T(u+\Delta u)=T(u)+
-\end{equation}
-
+To compute the dynamics of $A(u)$, we assume that with each damage position on the DNA there are repair protein attached to it which occupy space and collectively increase the area of the IDR. Damaged positions on the DNA, which are wrapped on histones needs to be exposed. With their exposure, repair proteins attach to the damage point. Because the length of the chromatin in the damage region does not change with expansion, only the portion of the chromatin occupied with nucleosomes change with UV dose (at saturation). Therefore, if $l$ is the chromatin length in the IDR, and $b$ is the length of chromatin wrapped around a single histone, then the portion of the chromatin occupied by histones at saturation is $N(u)b/l$. For each UV dose, every point in a concentric ring around the laser's focal point is equally probable to be damaged. The opening is then related to the additional exposure of damages point which were wrapped on histones. 
 
 \begin{equation}\label{dralpha}
-\frac{dA(U)}{du}=-k_A\frac{dN(U)}{dU}
+\frac{dA(u)}{du}=-k_A\frac{dN(u)}{du}+k_B\frac{dT(u)}{du}
 \end{equation}
 where $k_A$ is a constant. Using the initial condition $A(0)=A_0$, we find 
 \begin{equation}\label{eq:expansionFactor}
-A(u) = A_0 +k_Ak_NT_{max}\left(1-\exp(-k_Tu)\right),
+A(u) = A_0 +k_AN_0\left(1-\exp\left(-k_NT(u)\right)\right) +k_BT(u)
 \end{equation}
-with $A_0$ being a theoretical value for measurement in the absence of UV radiation. We interpret the increase in ROI radius with the UV dose as follows: while nucleosomes are sliding outside, repair proteins are invading and then binding at sites of DNA damages. The accumulation of these proteins are producing force on the chromatin that result in the radial outward expansion. In our model, the amount of repair proteins is directly proportional to the number of exposed damage points, which is also proportional to the number of nucleosome in the damage region.
+with $A_0$ being a theoretical value for measurement in the absence of UV radiation in an area $I_u$. We interpret the increase in ROI radius with the UV dose as follows: while nucleosomes are sliding outside, repair proteins are invading and then binding at sites of DNA damages. The accumulation of these proteins are producing force on the chromatin that result in the radial outward expansion. In our model, the amount of repair proteins is directly proportional to the number of exposed damage points, which is also proportional to the number of nucleosome in the damage region.
 
 We can now use these derivations to compute the fraction of DNA and nucleosome loss. The fraction of histone loss for UV dose $u$ is given by
 \begin{equation}\label{eq:histoneLoss}
